--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
     <meta charset=utf-8/>
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>TODO: Add short title here</title>
+    <title>Masaschusetts Drought and Rainfall Data</title>
+
+    <script src="js/d3.v6.1.1/d3.min.js"></script>
 </head>
 
 
 <body>
 
-    <h1>TODO: Add project title here</h1>
+    <h1>Diverting Droughts with Data: Designing a Visualization Tool to Drive Water Conservation Efforts Across Massachusetts</h1>
 
     <div>
         <h2>Motivation</h2>
-        TODO: Add motivation / use case here 
+
+        <div>
+            Water is a precious resource anywhere as it is used for many direct and indirect purposes such as drinking, cooking, producing steel for automobiles, and electricity. Specifically, we are interested in looking at water in the context of Massachusetts. Given the current Level 2 Drought in some areas of Massachusetts, the visualization is intended to make the public and citizens of Massachusetts more aware of this drought issue. Clearly, the state is already keeping watch on it and staying aware of it through the Massachusetts Drought Management Plan. However, the citizens should also be informed and aware so they can be encouraged to focus on water conservation. Even though our visualizations on provide past rainfall and drought data, it can make citizens more knowledgeable and aware of rainfall and drought levels in Massachusetts, specifically in the region they live in. From there, they can be more aware moving forward and possibly take preventative measures. The visualization will not be too complex as the public is not familiar with using lots of tooltips and other visualization features. We want the people in Massachusetts to conserve more water. They can use our visualizations to become more motivated as to exactly what state of water shortage specific regions in Massachusetts are in. 
+
+        </div> 
+
     </div>
+
+
+
 
     <div>
         <h2>Background</h2>
@@ -30,10 +40,12 @@
 
     <div>
         <h2>Acknowledgements</h2>
-        TODO: Cite resources used here   
+        <ul>
+            <li></li>
+        </ul>
     </div>
 
-
+    <script src="js/main.js"></script>
 </body>
 
 </html>
