--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
         <div>
             Water is a precious resource anywhere as it is used for many direct and indirect purposes such as drinking, cooking, producing steel for automobiles, and electricity. Specifically, we are interested in looking at water in the context of Massachusetts. Given the current Level 2 Drought in some areas of Massachusetts, the visualization is intended to make the public and citizens of Massachusetts more aware of this drought issue. Clearly, the state is already keeping watch on it and staying aware of it through the Massachusetts Drought Management Plan. However, the citizens should also be informed and aware so they can be encouraged to focus on water conservation. Even though our visualizations on provide past rainfall and drought data, it can make citizens more knowledgeable and aware of rainfall and drought levels in Massachusetts, specifically in the region they live in. From there, they can be more aware moving forward and possibly take preventative measures. The visualization will not be too complex as the public is not familiar with using lots of tooltips and other visualization features. We want the people in Massachusetts to conserve more water. They can use our visualizations to become more motivated as to exactly what state of water shortage specific regions in Massachusetts are in. 
-
         </div> 
 
     </div>
@@ -30,7 +29,24 @@
 
     <div>
         <h2>Background</h2>
-        TODO: Add link to report, demo video, link to data etc. here  
+        <div>
+            <!-- TODO: Add link to report, demo video, link to data etc. here*/ -->
+            <h4>Data</h4>
+            <div>
+                <p>
+                The precipitation database data is made available to the public on the Mass.gov website, which is owned by the Commonwealth of Massachusetts. The database that holds the data in the file has been monitored by the Massachusetts Department of Conservation and Recreation’s (DCR) Office of Water Resources. The website states that the precipitation data itself derives from observers and cooperative agencies. The standardized precipitation index (SDI) data is on the same website as the precipitation database data. The standardized precipitation index data is calculated monthly from values in the precipitation database data. Hence, it relies on data collected from the same sources of the precipitation database data. The link to the website with the raw data is below:
+                <a href="https://www.mass.gov/info-details/precipitation-data">Precipitation and Drought Raw Data</a>
+                </p>
+
+                <p>The precipitation database data, especially since it’s derived from a government agency, overall seems reliable. However, there are some minor possible issues with how the data was collected. The Mass.gov website says about 60 precipitation observation stations collected the precipitation data, but there are no details on the iden- tity and legitimacy of the observers themselves. Hence, it’s unclear whether the stations are reliable and provide accurate data. Furthermore, each station across the Massachusetts cities may be using different measurement tools with varying levels of precision and accuracy. Therefore, we cannot conclude whether the data is standardized. The cooperative agencies that are also referred to on the Mass.gov website have unknown identities. Thus, like the ambiguous observers, the precision, accuracy, and standardization of the agencies’ precipitation data cannot be verified. Furthermore, the precipitation measurements are rounded to two decimal places on the public dataset. There is a possibility that this level of precision may not allow us to make the most effective visualizations possible. The rounding restricts us from presenting the most detailed variation in rainfall patterns across Massachusetts (for example, a value of 2.883 inches of rainfall would be visualized the same way as 2.881 inches). Also, the measurement tools, observation stations, and cooperative agencies may have evolved, along with the precision and accuracy of the precipitation data. For instance, the cooperative agencies could have relied on tools in 1900 that were not as competent at collecting precipitation data as those used in 2015. Therefore, there’s a chance that rainfall data from older years such as 1900 may not be as accurate as that from more recent years such as 2015. Finally, each region in Massachusetts does not have the same amount of rainfall measurements in the data set. Some have more measurements than others, so our visualization could have more precise information about the precipitation pattern of regions in Massachusetts represented by more rows in the data set. There is a substantial amount of data for each region, but this consideration is still important to keep in mind. These same biases and ethical considerations apply to the SPI data since it derives from the precipitation database data. We will be relying on the 2017, 2018, and 2019 SPI data since they are the only ones available that most directly correlate with the precipitation database data we are using, which was generated in October 2019. The 2017-2019 SPI data might not contain the most representative values indicating the drought severity of a Massachusetts region. There might have been some weather anomalies throughout 2017-2019 that may have caused a region in Massachusetts to experience more or less precipitation during those years than usual. However, we are assuming the tools used to collect values for the precipitation database have improved over time. Hence, we think the 2017-2019 data is reliable since it was gathered only 4-6 years ago.
+                </p>
+
+
+
+            </div>
+
+            
+        </div>
     </div>
 
     <div>
