set up spaces for plots

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <h1>Diverting Droughts with Data: Designing a Visualization Tool to Drive Water Conservation Efforts Across Massachusetts</h1>
+    <h1 class="centered">Diverting Droughts with Data: Designing a Visualization Tool to Drive Water Conservation Efforts Across Massachusetts</h1>
 
     <div>
         <h2>Motivation</h2>
@@ -35,7 +35,31 @@
 
     <div>
         <h2>Visualization</h2>
-        TODO: Build your visualization tool here  
+        <!-- Create separate section for content (visualization) of webpage -->
+    <div class="container">
+
+        <!-- Create the section that contains the line chart -->
+        <div class="line-chart">
+            <!-- Add chart title -->
+            <h2 class="centered">Precipitation Distributions Over Time Across Massachusetts</h2>
+            <div id="vis1"></div>
+        </div>
+
+        <!-- Create the section that contains the map of Massachusetts -->
+        <div class="map">
+            <!-- Add chart title -->
+            <h2 class="centered">Drought Severities Across Massachusetts</h2>
+            <div id="vis2"></div>
+        </div>
+        
+        <!-- Create the section that contains the scatter graph-->
+        <div class="scatter">
+            <!-- Add chart title -->
+            <h2 class="centered">A Projection of Whether Lower Precipitation Values Indicate a Higher Risk of Intense Droughts</h2>
+            <div id="vis3"></div>
+        </div>
+        
+    </div>  
     </div>
 
     <div>
