--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
 
         <!-- Create the section that contains the line chart -->
-        <div class="line-chart">
+        <div class="line">
             <!-- Add chart title -->
             <h2 class="centered">Precipitation Distributions Over Time Across Massachusetts</h2>
             <div id="vis1"></div>
@@ -81,7 +81,10 @@
     <div>
         <h2>Acknowledgements</h2>
         <ul>
-            <li></li>
+            <li><a href="https://stackoverflow.com/questions/39964570/how-to-filter-data-with-d3-js">How to Filter Data with D3.js</a></li>
+            <li><a href="https://stackoverflow.com/questions/12151637/jsrender-json-column-name-with-space">Referencing Column/Field Names with Space Characters</a></li>
+            <li><a href="https://d3-graph-gallery.com/graph/line_basic.html">D3 Basic Line Chart</a></li>
+            <li><a href="https://stackoverflow.com/questions/20668961/d3-how-do-i-remove-comma-separator-from-my-xaxis">Removing Comma Separator from X-Axis</a></li>
         </ul>
     </div>
 
