worked more on line chart

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8/>
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Masaschusetts Drought and Precipitation Data</title>
+    <title>Massaschusetts Drought and Precipitation Data</title>
 
     <script src="js/d3.v6.1.1/d3.min.js"></script>
 </head>
@@ -85,6 +85,7 @@
             <li><a href="https://stackoverflow.com/questions/12151637/jsrender-json-column-name-with-space">Referencing Column/Field Names with Space Characters</a></li>
             <li><a href="https://d3-graph-gallery.com/graph/line_basic.html">D3 Basic Line Chart</a></li>
             <li><a href="https://stackoverflow.com/questions/20668961/d3-how-do-i-remove-comma-separator-from-my-xaxis">Removing Comma Separator from X-Axis</a></li>
+            <li><a href="https://observablehq.com/@d3/d3v6-migration-guide#group">D3 6.0 Migration Guide</a></li>
         </ul>
     </div>
 
