kept trying to add lines

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
 
         <!-- Create the section that contains the line chart -->
-        <div class="line">
+        <div class="line-chart">
             <!-- Add chart title -->
             <h2 class="centered">Precipitation Distributions Over Time Across Massachusetts</h2>
             <div id="vis1"></div>
