--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 
 <head>
-    <meta charset=utf-8/>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Massaschusetts Drought and Precipitation Data</title>
@@ -83,6 +83,7 @@
             <li><a href="https://d3-graph-gallery.com/graph/line_basic.html">D3 Basic Line Chart</a></li>
             <li><a href="https://stackoverflow.com/questions/20668961/d3-how-do-i-remove-comma-separator-from-my-xaxis">Removing Comma Separator from X-Axis</a></li>
             <li><a href="https://observablehq.com/@d3/d3v6-migration-guide#group">D3 6.0 Migration Guide</a></li>
+            <li><a href="https://github.com/d3/d3/issues/466">d3.format()(-1) yeilds "âˆ’1" with d3.min.js</a></li>
         </ul>
     </div>
 
