--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 
     </div>
 
-
-
-
     <div>
         <h2>Background</h2>
         <div>
@@ -45,12 +42,7 @@
 
                 <p>The precipitation database data, especially since it’s derived from a government agency, overall seems reliable. However, there are some minor possible issues with how the data was collected. The Mass.gov website says about 60 precipitation observation stations collected the precipitation data, but there are no details on the identity and legitimacy of the observers themselves. Hence, it’s unclear whether the stations are reliable and provide accurate data. Furthermore, each station across the Massachusetts cities may be using different measurement tools with varying levels of precision and accuracy. Therefore, we cannot conclude whether the data is standardized. The cooperative agencies that are also referred to on the Mass.gov website have unknown identities. Thus, like the ambiguous observers, the precision, accuracy, and standardization of the agencies’ precipitation data cannot be verified. Furthermore, the precipitation measurements are rounded to two decimal places on the public dataset. There is a possibility that this level of precision may not allow us to make the most effective visualizations possible. The rounding restricts us from presenting the most detailed variation in precipitation patterns across Massachusetts (for example, a value of 2.883 inches of precipitation would be visualized the same way as 2.881 inches). Also, the measurement tools, observation stations, and cooperative agencies may have evolved, along with the precision and accuracy of the precipitation data. For instance, the cooperative agencies could have relied on tools in 1900 that were not as competent at collecting precipitation data as those used in 2015. Therefore, there’s a chance that precipitation data from older years such as 1900 may not be as accurate as that from more recent years such as 2015. Finally, each region in Massachusetts does not have the same amount of precipitation measurements in the data set. Some have more measurements than others, so our visualization could have more precise information about the precipitation pattern of regions in Massachusetts represented by more rows in the data set. There is a substantial amount of data for each region, but this consideration is still important to keep in mind. These same biases and ethical considerations apply to the SPI data since it derives from the precipitation database data. We will be relying on the 2017, 2018, and 2019 SPI data since they are the only ones available that most directly correlate with the precipitation database data we are using, which was generated in October 2019. The 2017-2019 SPI data might not contain the most representative values indicating the drought severity of a Massachusetts region. There might have been some weather anomalies throughout 2017-2019 that may have caused a region in Massachusetts to experience more or less precipitation during those years than usual. However, we are assuming the tools used to collect values for the precipitation database have improved over time. Hence, we think the 2017-2019 data is reliable since it was gathered only 4-6 years ago.
                 </p>
-
-
-
             </div>
-
-            
         </div>
     </div>
 
@@ -58,7 +50,10 @@
         <h2>Visualization</h2>
         <!-- Create separate section for content (visualization) of webpage -->
         <div class="container">
-
+            <!-- Legend for the visualization -->
+            <div id="legend">
+            </div>
+            
             <!-- Create the section that contains the line chart -->
             <div id="vis1">
                 <!-- Add chart title -->
@@ -89,6 +84,7 @@
             <li><a href="https://stackoverflow.com/questions/20668961/d3-how-do-i-remove-comma-separator-from-my-xaxis">Removing Comma Separator from X-Axis</a></li>
             <li><a href="https://observablehq.com/@d3/d3v6-migration-guide#group">D3 6.0 Migration Guide</a></li>
             <li><a href="https://github.com/d3/d3/issues/466">d3.format()(-1) yields "âˆ’1" with d3.min.js</a></li>
+            <li><a href="https://d3-graph-gallery.com/graph/custom_legend.html">Legends in D3 Javascript</a>
         </ul>
     </div>
 
