Updated checkbox options

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
                 <!-- Add checkbox filter for years -->
                 <form action="/action_page.php">
-              <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-              <label for="vehicle1"> I have a bike</label><br>
-              <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-              <label for="vehicle2"> I have a car</label><br>
-              <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-              <label for="vehicle3"> I have a boat</label><br><br>
+              <input type="checkbox" id="vehicle1" name="vehicle1" value="2017">
+              <label for="year1">2017</label><br>
+              <input type="checkbox" id="vehicle2" name="vehicle2" value="2018">
+              <label for="year2">2018</label><br>
+              <input type="checkbox" id="vehicle3" name="vehicle3" value="2019">
+              <label for="year33">2019</label><br><br>
               <input type="submit" value="Submit">
             </form>
 
