--- a/index.html
+++ b/index.html
@@ -72,15 +72,11 @@
                 <h3 class="centered">A Projection of Whether Lower Precipitation Values Indicate a Higher Risk of Intense Droughts</h3>
 
                 <!-- Add checkbox filter for years -->
-                <form action="/action_page.php">
-              <input type="checkbox" id="vehicle1" name="vehicle1" value="2017">
-              <label for="year1">2017</label><br>
-              <input type="checkbox" id="vehicle2" name="vehicle2" value="2018">
-              <label for="year2">2018</label><br>
-              <input type="checkbox" id="vehicle3" name="vehicle3" value="2019">
-              <label for="year33">2019</label><br><br>
-              <input type="submit" value="Submit">
-            </form>
+            <div class="filter-options">
+               <input class="year_button" id="17" value="2017" type="checkbox" checked="checked">2017</input>
+               <input class="year_button" id="18" value="2018" type="checkbox" checked="checked">2018</input>
+               <input class="year-button" id="19" value="2019" type="checkbox" checked="checked">2019</input>
+            </div>
 
             </div>
         
