--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <li><a href="https://observablehq.com/@d3/d3v6-migration-guide#group">D3 6.0 Migration Guide</a></li>
             <li><a href="https://github.com/d3/d3/issues/466">d3.format()(-1) yields "âˆ’1" with d3.min.js</a></li>
             <li><a href="https://d3-graph-gallery.com/graph/custom_legend.html">Legends in D3 Javascript</a>
+            <li><a href="https://stackoverflow.com/questions/35388595/filter-data-on-multiple-columns-with-checkboxes-d3">Filter data with multiple columns with checkboxes - D3</a></li>
         </ul>
     </div>
 
