--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <h3 class="centered">A Projection of Whether Lower Precipitation Values Indicate a Higher Risk of Intense Droughts</h3>
 
                 <!-- Add checkbox filter for years -->
-            <div class="filter-options">
-               <input class="year_button" id="17" value="2017" type="checkbox" checked="checked">2017</input>
-               <input class="year_button" id="18" value="2018" type="checkbox" checked="checked">2018</input>
-               <input class="year-button" id="19" value="2019" type="checkbox" checked="checked">2019</input>
-            </div>
+                <div class="filter-options">
+                   <input class="year-button" id="17" value="2017" type="checkbox" checked="checked">2017</input>
+                   <input class="year-button" id="18" value="2018" type="checkbox" checked="checked">2018</input>
+                   <input class="year-button" id="19" value="2019" type="checkbox" checked="checked">2019</input>
+                </div>
 
             </div>
         
@@ -93,7 +93,7 @@
             <li><a href="https://observablehq.com/@d3/d3v6-migration-guide#group">D3 6.0 Migration Guide</a></li>
             <li><a href="https://github.com/d3/d3/issues/466">d3.format()(-1) yields "âˆ’1" with d3.min.js</a></li>
             <li><a href="https://d3-graph-gallery.com/graph/custom_legend.html">Legends in D3 Javascript</a>
-            <li><a href="https://stackoverflow.com/questions/35388595/filter-data-on-multiple-columns-with-checkboxes-d3">Filter data with multiple columns with checkboxes - D3</a></li>
+            <li><a href="https://stackoverflow.com/questions/15044385/d3-map-with-checkbox-filtering">D3 Map With Checkbox Filtering</a></li>
         </ul>
     </div>
 
