--- a/index.html
+++ b/index.html
@@ -73,38 +73,42 @@
 
                 <!-- Add checkbox filter for years -->
                 <div class="year-filter">
-                   <h4>Filter By Year</h4>
-                   <input class="year-button" id="17" value="2017" type="checkbox" checked="checked">2017</input>
-                   <input class="year-button" id="18" value="2018" type="checkbox" checked="checked">2018</input>
-                   <input class="year-button" id="19" value="2019" type="checkbox" checked="checked">2019</input>
+                    <label for="points">Filter by Year: </label>
+                    <input class="year-button" id="17" value="2017" type="checkbox" checked="checked">2017</input>
+                    <input class="year-button" id="18" value="2018" type="checkbox" checked="checked">2018</input>
+                    <input class="year-button" id="19" value="2019" type="checkbox" checked="checked">2019</input>
                 </div>
+
+                <br></br>
 
                 <!-- Add checkbox filter for regions -->
                 <div class="region-filter">
-                   <h4>Filter By Region</h4>
-                   <input class="region-button" id="Connecticut" value="Connecticut River" type="checkbox" checked="checked">Connecticut River</input>
-                   <input class="region-button" id="Northeast" value="Northeast" type="checkbox" checked="checked">Northeast</input>
-                   <input class="region-button" id="Central" value="Central" type="checkbox" checked="checked">Central</input>
-                   <input class="region-button" id="Southeast" value="Southeast" type="checkbox" checked="checked">Southeast</input>
-                   <input class="region-button" id="Western" value="Western" type="checkbox" checked="checked">Western</input>
-                   <input class="region-button" id="Cape" value="Cape Cod and Islands" type="checkbox" checked="checked">Cape Cod and Islands</input>
+                    <label for="points">Filter by Region: </label>
+                    <input class="region-button" id="Connecticut" value="Connecticut River" type="checkbox" checked="checked">Connecticut River</input>
+                    <input class="region-button" id="Northeast" value="Northeast" type="checkbox" checked="checked">Northeast</input>
+                    <input class="region-button" id="Central" value="Central" type="checkbox" checked="checked">Central</input>
+                    <input class="region-button" id="Southeast" value="Southeast" type="checkbox" checked="checked">Southeast</input>
+                    <input class="region-button" id="Western" value="Western" type="checkbox" checked="checked">Western</input>
+                    <input class="region-button" id="Cape" value="Cape Cod and Islands" type="checkbox" checked="checked">Cape Cod and Islands</input>
                 </div>
+
+                <br></br>
 
                 <!-- Add checkbox filter for months -->
                 <div class="month-filter">
-                   <h4>Filter By Month</h4>
-                   <input class="month-button" id="January" value="JAN" type="checkbox" checked="checked">January</input>
-                   <input class="month-button" id="February" value="FEB" type="checkbox" checked="checked">February</input>
-                   <input class="month-button" id="March" value="MAR" type="checkbox" checked="checked">March</input>
-                   <input class="month-button" id="April" value="APR" type="checkbox" checked="checked">April</input>
-                   <input class="month-button" id="May" value="MAY" type="checkbox" checked="checked">May</input>
-                   <input class="month-button" id="June" value="JUN" type="checkbox" checked="checked">June</input>
-                   <input class="month-button" id="July" value="JUL" type="checkbox" checked="checked">July</input>
-                   <input class="month-button" id="August" value="AUG" type="checkbox" checked="checked">August</input>
-                   <input class="month-button" id="September" value="SEP" type="checkbox" checked="checked">September</input>
-                   <input class="month-button" id="October" value="OCT" type="checkbox" checked="checked">October</input>
-                   <input class="month-button" id="November" value="NOV" type="checkbox" checked="checked">November</input>
-                   <input class="month-button" id="December" value="DEC" type="checkbox" checked="checked">December</input>
+                    <label for="points">Filter by Month: </label>
+                    <input class="month-button" id="January" value="JAN" type="checkbox" checked="checked">January</input>
+                    <input class="month-button" id="February" value="FEB" type="checkbox" checked="checked">February</input>
+                    <input class="month-button" id="March" value="MAR" type="checkbox" checked="checked">March</input>
+                    <input class="month-button" id="April" value="APR" type="checkbox" checked="checked">April</input>
+                    <input class="month-button" id="May" value="MAY" type="checkbox" checked="checked">May</input>
+                    <input class="month-button" id="June" value="JUN" type="checkbox" checked="checked">June</input>
+                    <input class="month-button" id="July" value="JUL" type="checkbox" checked="checked">July</input>
+                    <input class="month-button" id="August" value="AUG" type="checkbox" checked="checked">August</input>
+                    <input class="month-button" id="September" value="SEP" type="checkbox" checked="checked">September</input>
+                    <input class="month-button" id="October" value="OCT" type="checkbox" checked="checked">October</input>
+                    <input class="month-button" id="November" value="NOV" type="checkbox" checked="checked">November</input>
+                    <input class="month-button" id="December" value="DEC" type="checkbox" checked="checked">December</input>
                 </div>
 
             </div>
