got checkboxes for plot 3 to work

--- a/index.html
+++ b/index.html
@@ -75,37 +75,37 @@
                 <!-- Add checkbox filter for years -->
                 <div class="year-filter">
                     <p>Filter by Year: </p>
-                    <label for="17"><input type="checkbox" name="check" value="2017">2017</label>
-                    <label for="18"><input type="checkbox" name="check" value="2018">2018</label>
-                    <label for="19"><input type="checkbox" name="check" value="2019">2019</label>
+                    <label for="17"><input type="checkbox" name="check" value="2017" class="year-button">2017</label>
+                    <label for="18"><input type="checkbox" name="check" value="2018" class="year-button">2018</label>
+                    <label for="19"><input type="checkbox" name="check" value="2019" class="year-button">2019</label>
                 </div>
 
                 <!-- Add checkbox filter for regions -->
                 <div class="region-filter">
                     <p>Filter by Region: </p>
-                    <label for="Connecticut"><input type="checkbox" name="check" value="Connecticut River" id="Conneticut">Connecticut River</label>
-                    <label for="Northeast"><input type="checkbox" name="check" value="Northeast River" id="Northeast">Northeast</label>
-                    <label for="Central"><input type="checkbox" name="check" value="Central" id="Central">Central</label>
-                    <label for="Southeast"><input type="checkbox" name="check" value="Southeast" id="Southeast">Southeast</label>
-                    <label for="Western"><input type="checkbox" name="check" value="Western" id="Western">Western</label>
-                    <label for="Cape"><input type="checkbox" name="check" value="Cape Code and Islands" id="Cape">Cape Code and Islands</label>
+                    <label for="Connecticut"><input type="checkbox" name="check" value="Connecticut River" class="region-button">Connecticut River</label>
+                    <label for="Northeast"><input type="checkbox" name="check" value="Northeast" class="region-button">Northeast</label>
+                    <label for="Central"><input type="checkbox" name="check" value="Central"class="region-button">Central</label>
+                    <label for="Southeast"><input type="checkbox" name="check" value="Southeast" class="region-button">Southeast</label>
+                    <label for="Western"><input type="checkbox" name="check" value="Western" class="region-button">Western</label>
+                    <label for="Cape"><input type="checkbox" name="check" value="Cape Cod and Islands" class="region-button">Cape Code and Islands</label>
                 </div>
 
                 <!-- Add checkbox filter for months -->
                 <div class="month-filter">
                     <p>Filter by Month: </p>
-                    <label for="January"><input type="checkbox" name="check" value="January" id="January">JAN</label> 
-                    <label for="Februrary"><input type="checkbox" name="check" value="Februrary" id="Februrary">FEB</label> 
-                    <label for="March"><input type="checkbox" name="check" value="March" id="March">MAR</label> 
-                    <label for="April"><input type="checkbox" name="check" value="April" id="April">APR</label> 
-                    <label for="May"><input type="checkbox" name="check" value="May" id="May">MAY</label> 
-                    <label for="June"><input type="checkbox" name="check" value="June" id="June">JUN</label> 
-                    <label for="July"><input type="checkbox" name="check" value="July" id="July">JUL</label> 
-                    <label for="August"><input type="checkbox" name="check" value="August" id="August">AUG</label> 
-                    <label for="September"><input type="checkbox" name="check" value="September" id="September">SEP</label> 
-                    <label for="October"><input type="checkbox" name="check" value="October" id="October">OCT</label> 
-                    <label for="November"><input type="checkbox" name="check" value="November" id="November">NOV</label> 
-                    <label for="December"><input type="checkbox" name="check" value="December" id="December">DEC</label> 
+                    <label for="January"><input type="checkbox" name="check" value="JAN" id="January" class="month-button">JAN</label> 
+                    <label for="Februrary"><input type="checkbox" name="check" value="FEB" id="Februrary" class="month-button">FEB</label> 
+                    <label for="March"><input type="checkbox" name="check" value="MAR" id="March" class="month-button">MAR</label> 
+                    <label for="April"><input type="checkbox" name="check" value="APR" id="April" class="month-button">APR</label> 
+                    <label for="May"><input type="checkbox" name="check" value="MAY" id="May" class="month-button">MAY</label> 
+                    <label for="June"><input type="checkbox" name="check" value="JUN" id="June" class="month-button">JUN</label> 
+                    <label for="July"><input type="checkbox" name="check" value="JUL" id="July" class="month-button">JUL</label> 
+                    <label for="August"><input type="checkbox" name="check" value="AUG" id="August" class="month-button">AUG</label> 
+                    <label for="September"><input type="checkbox" name="check" value="SEP" id="September" class="month-button">SEP</label> 
+                    <label for="OCT"><input type="checkbox" name="check" value="October" id="October" class="month-button">OCT</label> 
+                    <label for="November"><input type="checkbox" name="check" value="NOV" id="November" class="month-button">NOV</label> 
+                    <label for="December"><input type="checkbox" name="check" value="DEC" id="December" class="month-button">DEC</label> 
                 </div>
                 <div>   
                     <p>
@@ -129,6 +129,11 @@
             <li><a href="https://d3-graph-gallery.com/graph/custom_legend.html">Legends in D3 Javascript</a>
             <li><a href="https://stackoverflow.com/questions/15044385/d3-map-with-checkbox-filtering">D3 Map With Checkbox Filtering</a></li>
             <li><a href="https://www.javascripttutorial.net/javascript-dom/javascript-checkbox/">Checkbox D3 Javascript</li>
+            <li><a href="https://stackoverflow.com/questions/1771786/question-mark-and-colon-in-javascript">Conditional Operators</a></li>
+            <li><a href="https://jonathansoma.com/lede/storytelling/d3/user-input-checkboxes-dropdowns/">User input (Checkboxes, Dropdowns, Radio Buttons)</a></li>
+            <li><a href="https://stackoverflow.com/questions/2003815/how-to-remove-element-from-an-array-in-javascript">How to Remove and Element From an Array in JavaScript</a></li>
+            <li><a href="https://www.w3schools.com/js/js_if_else.asp">Conditional Statements in JavaScript</a></li>
+            <li><a href="https://www.w3schools.com/js/js_arrays.asp">JavaScript Arrays</a></li>
         </ul>
     </div>
 
