attempting year filter

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                       <option value="6">Tesla</option>
                     </select> -->
 
-                    <select name="age" id="selectAge" multiple multiselect-select-all="true"></select>
+                    <select name="check"></select>
 
 
                 </div> 
