--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
             </div>
         </div>
     </div>
-    
+
     <div>
         <h2>Visualization</h2>
         <!-- Create separate section for content (visualization) of webpage -->
         <div class="container">
             <!-- Legend for the visualization -->
             <div id="legend">
+                <h4>***Please make your selection using all three filters (year, region, and month) before pressing the button.</h4>
                 <!-- Add drop down menu filter for years -->
                 <div class="year-filter">
                     <p>Filter by Year (use for 1st graph only): </p>
