--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <label for="Central"><input type="checkbox" name="check3" value="Central"class="region-button">Central</label>
                     <label for="Southeast"><input type="checkbox" name="check3" value="Southeast" class="region-button">Southeast</label>
                     <label for="Western"><input type="checkbox" name="check3" value="Western" class="region-button">Western</label>
-                    <label for="Cape"><input type="checkbox" name="check3" value="Cape Cod and Islands" class="region-button3">Cape Cod and Islands</label>
+                    <label for="Cape"><input type="checkbox" name="check3" value="Cape Cod and Islands" class="region-button">Cape Cod and Islands</label>
                 </div>
 
                 <!-- Add checkbox filter for months -->
