fixed line chart filters

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <li><a href="https://stackoverflow.com/questions/2003815/how-to-remove-element-from-an-array-in-javascript">How to Remove and Element From an Array in JavaScript</a></li>
             <li><a href="https://www.w3schools.com/js/js_if_else.asp">Conditional Statements in JavaScript</a></li>
             <li><a href="https://www.w3schools.com/js/js_arrays.asp">JavaScript Arrays</a></li>
+            <li><a href="https://d3-graph-gallery.com/graph/line_filter.html">Line plot with Dropdown to Filter Group in d3.js</a></li>
         </ul>
     </div>
 
