uploaded geojson file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             
-            <div class="child2">
+            <div class="child2" class="centered">
                 <!-- Create the section that contains the line chart -->
                 <div id="vis1">
                     <!-- Add chart title -->
@@ -149,6 +149,7 @@
             <li><a href="https://www.w3schools.com/js/js_if_else.asp">Conditional Statements in JavaScript</a></li>
             <li><a href="https://www.w3schools.com/js/js_arrays.asp">JavaScript Arrays</a></li>
             <li><a href="https://d3-graph-gallery.com/graph/line_filter.html">Line plot with Dropdown to Filter Group in d3.js</a></li>
+            <li><a href="https://maps.massgis.digital.mass.gov/MassMapper/MassMapper.html">Resource Used to Create the GeoJson File for the Massachusetts Map</a></li>
         </ul>
     </div>
 
