--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div id="vis2">
                     <!-- Add chart title -->
                     <h3 class="centered">Drought Severities Over Time and Regions</h3>
-                    <h3 id="map__text" class="centered">Select a county on the map ...</h3>
+                    <h3 id="map__text" class="centered">Select a city on the map ...</h3>
                     <div id="btn-zoom">
                         <i id="btn-zoom--in" class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
                         <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
