added stars to map

--- a/index.html
+++ b/index.html
@@ -90,11 +90,7 @@
                 <div id="vis2">
                     <!-- Add chart title -->
                     <h3 class="centered">Drought Severities Over Time and Regions</h3>
-                    <h3 id="map__text" class="centered">Select a city on the map ...</h3>
-                    <div id="btn-zoom">
-                        <i id="btn-zoom--in" class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
-                        <i id="btn-zoom--out"class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
-                    </div>
+                    <h3 id="map__text" class="centered">Hover Over a Star to See SPI Data for a Region</h3>
                 </div>
             
                 <!-- Create the section that contains the scatter graph-->
@@ -154,7 +150,12 @@
             <li><a href="https://www.w3schools.com/js/js_if_else.asp">Conditional Statements in JavaScript</a></li>
             <li><a href="https://www.w3schools.com/js/js_arrays.asp">JavaScript Arrays</a></li>
             <li><a href="https://d3-graph-gallery.com/graph/line_filter.html">Line plot with Dropdown to Filter Group in d3.js</a></li>
-            <li><a href="https://maps.massgis.digital.mass.gov/MassMapper/MassMapper.html">Resource Used to Create the GeoJson File for the Massachusetts Map</a></li>
+            <li><a href="https://github.com/glynnbird/usstatesgeojson/blob/master/massachusetts.geojson">Resource Used for the GeoJson File for the Massachusetts Map</a></li>
+            <li><a href="https://medium.com/@ivan.ha/using-d3-js-to-plot-an-interactive-map-34fbea76bd78">Using D3.js to Plot an Interactive Map</a></li>
+            <li><a href="https://www.d3indepth.com/geographic/">Making Maps with D3</a></li>
+            <li><a href="https://www.w3schools.com/graphics/svg_polygon.asp">SVG Polygon</a></li>
+            <li><a href="https://stackoverflow.com/questions/20632226/how-to-resize-polygon-in-svg">How to Resize Polygon in SVG?</a></li>
+            <li><a href="https://stackoverflow.com/questions/19773081/better-way-to-position-svgpolygon">Better Way to Position SVG Polygon</a></li>
         </ul>
     </div>
 
